@@ -70,7 +70,10 @@ protected:
 	 ********************************************************************/
 public:
 	void write(t_channel channel, t_value value);
-	t_value read(t_channel channel);
+	void writeRange(t_channel address, t_value* values, t_channel num);
+
+	void read(t_channel channel, t_value* value);
+	void readRange(t_channel address, t_value* values, t_channel num);
 
 protected:
 	t_value m_values[512];
